# WASM-as-OS

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Changes Document.docx  DEPLOYMENT.md  Procfile  Procfile.dev  README.md  RUNNING_GUIDE.md  SECURITY.md  Sprint 2 Reflection.docx  Sprint 4 Reflection.docx  Test Plan Sprint 4.docx  TestPlanTracker (2).xlsx  TestPlanTracker-3.xlsx  TestPlanTracker.xlsx  build_output.txt  fly.toml  nixpacks.toml  prometheus.yml  railway.json  railway.toml  render.yaml  start.bat  start.ps1  stop.ps1  test_add.rs  test_add.wasm  test_loop.rs  wasm_os.db
.cargo/: config.toml
.github/workflows/: ci.yml
WasmOSTest/: big_module_fixed.wasm  bit_ops.wat  bubble_sort.wat  eagle_lyft.wasm  fibonacci.wat  globals_stress.wat  nested_control.wat  simplei32.wasm  simplei32.wat  test.wasm  test.wat  test_loop.wasm
WasmOSTest/trace_tests/: README.md  bubble_sort_large.wat  divide_by_zero.wat  fast_add.wat  global_counter.wat  memory_heavy.wat  multi_function.wat  nested_loops.wat  seed_and_test_traces.ps1  slow_fibonacci.wat  stack_overflow.wat  unreachable_trap.wat
backend/: README.md  go.mod  main.go
docs/: WASM_OS_Test_Cases.csv
docs/academic/: Sprint 1 Reflection.docx  Sprint 6 Reflection.docx  Test Plan Tracker Sprint 4.xlsx  Test Plan Tracker Sprint 6.xlsx
frontend/: .env.local.example  .env.production  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/scripts/: trace_test_runner.ts
frontend/src/: App.tsx  api.ts  env.d.ts
grafana/dashboards/: wasmos-overview.json
helm/wasmos/: Chart.yaml  values.yaml
k8s/: deployment.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secrets.yaml
scripts/: start-local-dev.ps1  stop-local-dev.ps1  verify-local-dev.ps1  verify-railway.ps1  verify-railway.sh
src/: config.rs  error.rs  main.rs  metrics.rs  plugins.rs  scheduler.rs  server.rs  tenancy.rs  websocket.rs
src/db/: mod.rs  models.rs  repository.rs  repository_test.rs
src/middleware/: auth.rs  logging.rs  rate_limit.rs
src/run_wasm/: build_runtime.rs  mod.rs  trap.rs  wasm_control.rs  wasm_engine.rs  wasm_module.rs
tests/: api_tests.rs  lib.rs  syscall_test.rs
wasmos/: .env.example  .gitignore  Cargo.toml  README.md  config.toml.example  deny.toml  rust-toolchain.toml
wasmos/benches/: wasm_benchmarks.rs
wasmos/migrations/: 001_initial_schema.sql  002_indexes_and_constraints.sql  003_execution_id_and_indexes.sql  004_perf_indexes.sql
wasmos/src/: advanced_execution_endpoints.rs  capability.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  plugins.rs  query_cache.rs  redis_cache.rs  scheduler.rs  server.rs  telemetry.rs  tenancy.rs  tracing_spans.rs  websocket.rs
wasmos/src/db/: mod.rs  models.rs  repository.rs  repository_test.rs
wasmos/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  security_headers.rs  security_headers.rs 
wasmos/src/run_wasm/: advanced_executor.rs  build_runtime.rs  execution_framework.rs  execution_result.rs  import_call_manager.rs  interpreter.rs  mod.rs  run_wasm.rs  syscall_policy.rs  tests.rs  trap.rs  wasm_control.rs  wasm_engine.rs  wasm_imports.rs  wasm_module.rs
wasmos/src/scheduler_files/: wasm_scheduler.rs
wasmos/src/struct_files/: mod.rs  wasm_list.rs  wasm_struct.rs
wasmos/src/utilities/: mod.rs  wasm_loader.rs
wasmos/src/utility_files/: mod.rs  wasm_destroyer.rs  wasm_loader.rs  wasm_scheduler.rs
wasmos/src/wasm_files/: wasm_list.csv  wasm_list.txt
wasmos/tests/: api_tests.rs  lib.rs  module_loader_test.rs  scheduler_test.rs  wasm_os_test_runner.rs
web/: 404.html  index.html  index.txt  test-upload.html
web-ui/: index.html  package-lock.json  package.json
(+173 files in other folders)
