[package]
name = "wasmos"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11" #Menu
clearscreen = "4.0.2" #Clear Screen
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

#For .wasm file detection
directories = "5.0" 
walkdir = "2.3"
